# slo-operator

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yaml  codeql.yaml  release.yaml
charts/slo-operator/: Chart.yaml  values.yaml
charts/slo-operator/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  rbac.yaml
config/: deployment.yaml  kustomization.yaml  rbac.yaml
config/crd/: servicelevelobjectives.yaml
config/samples/: servicelevelobjective.yaml
docs/: architecture.md
src/slo_operator/: __init__.py  __main__.py  budget.py  compiler.py  operator.py  prometheus.py  query.py  validation.py  windows.py
tests/: test_budget.py  test_compiler.py  test_prometheus.py  test_query.py  test_validation.py  test_windows.py
